--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.4",
     "mongoose-unique-validator": "^3.1.0",
     "nodemailer": "^6.8.0",
