--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
+    "sweetalert2": "^11.6.15",
     "validator": "^13.7.0"
   }
 }
