--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
@@ -26,6 +27,7 @@
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
     "promise": "^8.3.0",
+    "stripe": "^11.5.0",
     "sweetalert2": "^11.6.15",
     "validator": "^13.7.0"
   }
